finished GET endpoints for users
