# public/swagger/openapi.yaml
@@ -107,7 +107,22 @@ paths:
             application/json:
               schema:
                 properties:
-                  user: { description: 'Logged in user', properties: { id: { description: 'Gets the authenticated user', type: integer }, uuid: { description: 'Gets the authenticated user', type: string }, name: { description: 'Gets the authenticated user', type: string }, email: { description: 'Gets the authenticated user', type: string }, active: { description: 'Gets the authenticated user', type: boolean }, role_id: { description: 'Gets the authenticated user', type: integer }, settings: { description: 'Gets the authenticated user', type: object }, last_login: { description: 'Gets the authenticated user', type: string }, created_at: { description: 'Gets the authenticated user', type: string }, updated_at: { description: 'Gets the authenticated user', type: string }, is_admin: { description: 'Gets the authenticated user', type: boolean }, is_manager: { description: 'Gets the authenticated user', type: boolean }, is_user: { description: 'Gets the authenticated user', type: boolean }, is_viewer: { description: 'Gets the authenticated user', type: boolean }, role_label: { description: 'Gets the authenticated user', type: string }, role: { description: 'Gets the authenticated user', properties: { id: { description: 'Gets the authenticated user', type: integer }, name: { description: 'Gets the authenticated user', type: string }, created_at: { description: 'Gets the authenticated user', type: string }, updated_at: { description: 'Gets the authenticated user', type: string } }, type: object } }, type: object }
+                  id: { description: 'Gets the authenticated user', type: integer }
+                  uuid: { description: 'Gets the authenticated user', type: string }
+                  name: { description: 'Gets the authenticated user', type: string }
+                  email: { description: 'Gets the authenticated user', type: string }
+                  active: { description: 'Gets the authenticated user', type: boolean }
+                  role_id: { description: 'Gets the authenticated user', type: integer }
+                  settings: { description: 'Gets the authenticated user', type: object }
+                  last_login: { description: 'Gets the authenticated user', type: string }
+                  created_at: { description: 'Gets the authenticated user', type: string }
+                  updated_at: { description: 'Gets the authenticated user', type: string }
+                  is_admin: { description: 'Gets the authenticated user', type: boolean }
+                  is_manager: { description: 'Gets the authenticated user', type: boolean }
+                  is_user: { description: 'Gets the authenticated user', type: boolean }
+                  is_viewer: { description: 'Gets the authenticated user', type: boolean }
+                  role_label: { description: 'Gets the authenticated user', type: string }
+                  role: { description: 'Gets the authenticated user', properties: { id: { description: 'Gets the authenticated user', type: integer }, name: { description: 'Gets the authenticated user', type: string }, created_at: { description: 'Gets the authenticated user', type: string }, updated_at: { description: 'Gets the authenticated user', type: string } }, type: object }
                 type: object
         '401':
           description: Unauthorized
@@ -135,6 +150,67 @@ paths:
       security:
         jwt: {  }
   /v1/users:
+    get:
+      tags:
+        - 'Users Management'
+      summary: 'Gets the list of users'
+      description: 'Gets the list of users'
+      operationId: 'LarAPI\Modules\Auth\Controllers\UserController::index'
+      parameters:
+        -
+          name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 1
+        -
+          name: per_page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 20
+        -
+          name: sort
+          in: query
+          required: false
+          schema:
+            properties:
+              field:
+                description: 'Field name to use in sort'
+                type: string
+              order:
+                description: 'Order: ''asc'' or ''desc'''
+                type: string
+            type: object
+        -
+          name: search
+          in: query
+          description: 'Term to search'
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 'The list of users'
+          content:
+            application/json:
+              schema:
+                properties:
+                  data: { description: 'Gets the list of users', type: array, items: { properties: { id: { description: 'Gets the list of users', type: integer }, uuid: { description: 'Gets the list of users', type: string }, name: { description: 'Gets the list of users', type: string }, email: { description: 'Gets the list of users', type: string }, active: { description: 'Gets the list of users', type: boolean }, role_id: { description: 'Gets the list of users', type: integer }, settings: { description: 'Gets the list of users', type: object }, last_login: { description: 'Gets the list of users', type: string }, created_at: { description: 'Gets the list of users', type: string }, updated_at: { description: 'Gets the list of users', type: string }, is_admin: { description: 'Gets the list of users', type: boolean }, is_manager: { description: 'Gets the list of users', type: boolean }, is_user: { description: 'Gets the list of users', type: boolean }, is_viewer: { description: 'Gets the list of users', type: boolean }, role_label: { description: 'Gets the list of users', type: string }, role: { description: 'Gets the list of users', properties: { id: { description: 'Gets the list of users', type: integer }, name: { description: 'Gets the list of users', type: string }, created_at: { description: 'Gets the list of users', type: string }, updated_at: { description: 'Gets the list of users', type: string } }, type: object } }, type: object } }
+                  pagination: { description: 'Gets the list of users', properties: { page_count: { description: 'Gets the list of users', type: integer }, total: { description: 'The filtered total count', type: integer }, total_all: { description: 'The unfiltered total count', type: integer } }, type: object }
+                type: object
+        '400':
+          description: 'Invalid Request'
+        '401':
+          description: Unauthorized
+        '403':
+          description: 'Access Denied'
+        '404':
+          description: 'Resource not found'
+      security:
+        jwt: {  }
     post:
       tags:
         - 'Users Management'
@@ -190,6 +266,54 @@ paths:
           description: 'Access Denied'
         '422':
           description: 'Data is invalid'
+      security:
+        jwt: {  }
+  '/v1/users/{uuid}':
+    get:
+      tags:
+        - 'Users Management'
+      summary: 'Gets the info of a specific user'
+      description: 'Gets the info of a specific user'
+      operationId: 'LarAPI\Modules\Auth\Controllers\UserController::show'
+      parameters:
+        -
+          name: uuid
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 'The user info'
+          content:
+            application/json:
+              schema:
+                properties:
+                  id: { description: 'Gets the info of a specific user', type: integer }
+                  uuid: { description: 'Gets the info of a specific user', type: string }
+                  name: { description: 'Gets the info of a specific user', type: string }
+                  email: { description: 'Gets the info of a specific user', type: string }
+                  active: { description: 'Gets the info of a specific user', type: boolean }
+                  role_id: { description: 'Gets the info of a specific user', type: integer }
+                  settings: { description: 'Gets the info of a specific user', type: object }
+                  last_login: { description: 'Gets the info of a specific user', type: string }
+                  created_at: { description: 'Gets the info of a specific user', type: string }
+                  updated_at: { description: 'Gets the info of a specific user', type: string }
+                  is_admin: { description: 'Gets the info of a specific user', type: boolean }
+                  is_manager: { description: 'Gets the info of a specific user', type: boolean }
+                  is_user: { description: 'Gets the info of a specific user', type: boolean }
+                  is_viewer: { description: 'Gets the info of a specific user', type: boolean }
+                  role_label: { description: 'Gets the info of a specific user', type: string }
+                  role: { description: 'Gets the info of a specific user', properties: { id: { description: 'Gets the info of a specific user', type: integer }, name: { description: 'Gets the info of a specific user', type: string }, created_at: { description: 'Gets the info of a specific user', type: string }, updated_at: { description: 'Gets the info of a specific user', type: string } }, type: object }
+                type: object
+        '400':
+          description: 'Invalid Request'
+        '401':
+          description: Unauthorized
+        '403':
+          description: 'Access Denied'
+        '404':
+          description: 'Resource not found'
       security:
         jwt: {  }
 components:
